--- a/index.html
+++ b/index.html
@@ -8,27 +8,23 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
 
-    <title>beaker-notebook by twosigma</title>
+    <title>beaker-notebook</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>beaker-notebook</h1>
-        <h2>Beaker notebook</h2>
+        <h1></h1>
 
         <section id="downloads">
-          <a href="https://github.com/twosigma/beaker-notebook/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/twosigma/beaker-notebook/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/twosigma/beaker-notebook" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
     </header>
 
     <div class="container">
       <section id="main_content">
-        <p>Coming soon.</p>
+        <p></p>
       </section>
     </div>
 
