--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -70,7 +70,8 @@
     <script src="vendor/vega/vega.js"></script>
     <script src="vendor/vega/d3.geo.projection.min.js"></script>
     <script src="vendor/vega/d3.layout.cloud.js"></script>
-
+    <script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs"
+            data-app-key="h6dwiodgka3iy2d"></script>
     <script src="js/beaker.js"></script>
     <script src="js/module/generalUtils.js"></script>
     <script src="js/module/commonUI.js"></script>
