--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                             <li><a href="about.html">About</a></li>
                             <li><a href="getting-started.html">Getting started</a></li>
                             <li><a href="faq.html">FAQ</a></li>
+                            <li><a href="try.html">Try Beaker</a></li>
 
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
