--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: default
 
 <div class='row'>          
     <div class='col-sm-12'>
-        <p class='text-main'>Beaker is a polyglot code notebook that allows data scientists to analyze data and document their process using multiple programming languages. Users can seamlessly switch between their favorite languages and tools within a single document.</p>
+        <p class='text-main'>Beaker is a polyglot code notebook that allows data scientists to analyze and visualize data and document their process using multiple programming languages. Users can seamlessly switch between their favorite languages and tools within a single document.</p>
     </div>          
 </div>      
 
