added footer and css tweaks

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ layout: default
             <button type="button" class="btn btn-lg btn-default">Windows</button>
             <button type="button" class="btn btn-lg btn-default">Linux</button>
             <br /> <br />
-            <a href='#'>Access source on GitHub</a>
+            <a href="https://github.com/twosigma/beaker-notebook">Access source on GitHub</a>
         </div>
     </div>          
 </div>          
