more features added to about

--- a/index.html
+++ b/index.html
@@ -35,12 +35,17 @@ layout: default
 <div class='row'>          
     <div class='col-sm-6 col-sm-offset-3'>
         <div align='center'>
-            <p class='text-main'>Download Beaker for:</p>
-            <button type="button" class="btn btn-lg btn-default">Mac</button>
-            <button type="button" class="btn btn-lg btn-default">Windows</button>
-            <button type="button" class="btn btn-lg btn-default">Linux</button>
-            <br /> <br />
-            <a href="https://github.com/twosigma/beaker-notebook">Access source on GitHub</a>
+            <p class='text-main'>
+                Downloads:
+            </p>
+            <p>
+                <button type="button" class="btn btn-lg btn-default">Mac</button>
+                <button type="button" class="btn btn-lg btn-default">Windows</button>
+                <button type="button" class="btn btn-lg btn-default">Linux</button>
+            </p>
+            <p>
+                <a href="https://github.com/twosigma/beaker-notebook">Source on GitHub</a>
+            </p>
         </div>
     </div>          
 </div>          
