design tweaks and new FAQs

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: The data scientist's lab notebook
 ---
 
             
@@ -33,15 +34,30 @@ layout: default
 </div>      
 
 <div class='row'>          
-    <div class='col-sm-6 col-sm-offset-3'>
+    <div class='col-sm-4 col-sm-offset-4'>
         <div align='center'>
             <p class='text-main'>
-                Downloads:
+                Get the beta version:
             </p>
             <p>
-                <button type="button" class="btn btn-lg btn-default">Mac</button>
-                <button type="button" class="btn btn-lg btn-default">Windows</button>
-                <button type="button" class="btn btn-lg btn-default">Linux</button>
+                <p>Please provide your email address. You'll receive a download link when you confirm your address.</p>
+
+                <!-- Begin MailChimp Signup Form -->
+                <div id="mc_embed_signup">
+                    <form action="http://twosigma.us3.list-manage.com/subscribe/post?u=d05838b85c905bc618b25e5a9&amp;id=6b3010163c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+
+                        <div class="mc-field-group">
+                            <label for="mce-EMAIL"></label>
+                            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder='Email address'> <input type="submit" value="Sign up" name="subscribe" id="mc-embedded-subscribe" class="button">
+                        </div>
+                        <div id="mce-responses" class="clear">
+                            <div class="response" id="mce-error-response" style="display:none"></div>
+                            <div class="response" id="mce-success-response" style="display:none"></div>
+                        </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <div style="position: absolute; left: -5000px;"><input type="text" name="b_d05838b85c905bc618b25e5a9_6b3010163c" value=""></div>
+                        <div class="clear"></div>
+                    </form>
+                </div>
             </p>
             <p>
                 <a href="https://github.com/twosigma/beaker-notebook">Source on GitHub</a>
