--- a/core/src/main/web/index.html
+++ b/core/src/main/web/index.html
@@ -99,6 +99,7 @@
   <script src="js/module/bkCore.js"></script>
   <script src="js/module/bkDebug.js"></script>
   <script src="js/module/bkHelper.js"></script>
+  <script src="js/module/bkBunsenHelper.js"></script>
   <script src="js/module/bkNotebook.js"></script>
   <script src="js/module/bkNotebookCellModelManager.js"></script>
   <script src="js/module/bkNotebookEvaluators.js"></script>
