--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@ title: About / features
             <div class='col-sm-6'>
                 <h4 class='h-feature'>Visualizations</h4>
                 <p>
-                    Visualizations create with libraries like ggplot2 and matplotlib will appear directly in the notebook along with your code.
+                    Visualizations created with libraries like ggplot2 and matplotlib will appear directly in the notebook along with your code.
                 </p> 
             </div>
             
@@ -100,7 +100,7 @@ title: About / features
             <div class='col-sm-6'>
                 <h4 class='h-feature'>Organization</h4>
                 <p>
-                    Beaker provides several features to help your organize your notebooks, for your own convenience or for sharing your work with colleagues.
+                    Beaker provides several features to help organize your notebooks, for your own convenience or for sharing your work with colleagues.
                 </p> 
                 <p>
                     These features include: collapsible nested sections with headers, lock notebook (hide all code and disable editing), toggle visibility of code and output on individual cells, initialization cells (run automatically on notebook load), and delete all output.
