--- a/getting-started.html
+++ b/getting-started.html
@@ -34,7 +34,7 @@ title: Getting started
                 Install <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html">JDK 7</a>
 
                 <h4>Python</h4>
-                <p>Beaker requires Python to startup, and the Python plugin requires IPython >= 1.0. The easiest way to install both of these is is with <a href='https://store.continuum.io/cshop/anaconda/'>Anaconda</a>. The default install will give you everything you need.</p>                                    
+                <p>Beaker requires Python to startup, and the Python plugin requires IPython >= 1.0. The easiest way to install both of these is with <a href='https://store.continuum.io/cshop/anaconda/'>Anaconda</a>. The default install will give you everything you need.</p>                                    
 
                 <h3>Download Beaker</h3>
 
@@ -82,7 +82,7 @@ title: Getting started
                 Install <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html">JDK 7</a>
 
                 <h4>Python</h4>
-                <p>Beaker requires Python to startup, and the Python plugin requires IPython >= 1.0. The easiest way to install both of these is is with <a href='https://store.continuum.io/cshop/anaconda/'>Anaconda</a>. The default install will give you everything you need.</p>
+                <p>Beaker requires Python to startup, and the Python plugin requires IPython >= 1.0. The easiest way to install both of these is with <a href='https://store.continuum.io/cshop/anaconda/'>Anaconda</a>. The default install will give you everything you need.</p>
 
                 <h4>nginx</h4>
                 <p>Download <a href="http://nginx.org/en/download.html">nginx</a>. Extract the folder and <a href="http://www.computerhope.com/issues/ch000549.htm">add it to your PATH</a>.</p>
@@ -115,7 +115,7 @@ title: Getting started
                 <p>See above for a link to install IPython via Anaconda</p>                                    
 
                 <h5>R</h5>
-                <p>Install <a href="http://cran.r-project.org/bin/macosx/">R</a> and <a href="http://xquartz.macosforge.org/landing/">XQuartz</a>. Open R and run these commands</p>
+                <p>Install <a href="http://cran.r-project.org/bin/windows/base/">R</a>. Open R and run these commands</p>
 
                 <code>install.packages('Rserve',,'http://www.rforge.net/')</code>
                 <br />
