added privacy policy page, changed to TSOS

--- a/about.html
+++ b/about.html
@@ -13,7 +13,6 @@ title: About / features
 
     <div class='col-sm-3 col-sm-push-9' id='nav-column'>
         <ul class="nav nav-stacked" id="sidebar">
-            <li><a href="#sec1">Overview</a></li>
             <li><a href="#sec2">Features</a></li>
             <li><a href="#sec3">Examples</a></li>
             <li><a href="#sec4">Open source</a></li>
@@ -24,7 +23,6 @@ title: About / features
 
     <div class='col-sm-9 col-sm-pull-3'>
 
-        <h2 id="sec1">Overview</h2>
             <p>Beaker is a polyglot code notebook that allows data scientists to analyze data and document their process using multiple programming languages. Users can seamlessly switch between their favorite languages and tools within a single document.</p>
             
             <img src='images/bk4.png' alt="" class='img-responsive'>
@@ -175,7 +173,7 @@ title: About / features
 
         <h2 id="sec6" class='h-about'>Two Sigma</h2>
         <p>
-            Beaker was created by <a href="http://www.twosigma.com">Two Sigma Investments</a>. 
+            Beaker was created and is maintained by <a href="http://www.twosigma.com">Two Sigma</a>. 
         </p>                         
 
     </div>      
