added alt tags to images

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@ title: About / features
 
         <p>Beaker is a polyglot code notebook that allows data scientists to analyze data and document their process using multiple programming languages. Users can seamlessly switch between their favorite languages and tools within a single document.</p>
 
-        <img src='images/bk4.png' alt="" class='img-responsive'>
+        <img src='images/bk4.png' alt="Screenshot of two Beaker notebooks with Python, R, and HTML code" class='img-responsive'>
         <h2 id="sec2" class='h-about'>Features</h2>
 
         <h3>Language support</h3>
@@ -37,14 +37,14 @@ title: About / features
             Beaker is built with a plugin-based architecture, so additional languages can easily by added by us or anybody else.
         </p>
 
-        <img src='images/languages/python.png' class='img-language-about' alt=''>
-        <img src='images/languages/r.png' class='img-language-about' alt=''>
-        <img src='images/languages/julia.png' class='img-language-about' alt=''>
-        <img src='images/languages/groovy.png' class='img-language-about' alt=''>
-        <img src='images/languages/html.png' class='img-language-about' alt=''>
-        <img src='images/languages/markdown.png' class='img-language-about' alt=''>
-        <img src='images/languages/latex.png' class='img-language-about' alt=''>
-        <img src='images/languages/js.png' class='img-language-about' alt=''>    
+        <img src='images/languages/python.png' class='img-language-about' alt='Python logo'>
+        <img src='images/languages/r.png' class='img-language-about' alt='R logo'>
+        <img src='images/languages/julia.png' class='img-language-about' alt='Julia logo'>
+        <img src='images/languages/groovy.png' class='img-language-about' alt='Groovy logo'>
+        <img src='images/languages/html.png' class='img-language-about' alt='HTML logo'>
+        <img src='images/languages/markdown.png' class='img-language-about' alt='Markdown logo'>
+        <img src='images/languages/latex.png' class='img-language-about' alt='Latex logo'>
+        <img src='images/languages/js.png' class='img-language-about' alt='JavaScript logo'>    
 
         <h3>Notebook format</h3>
 
@@ -57,14 +57,14 @@ title: About / features
             </div>
 
             <div class='col-sm-6'>
-                <img src='images/screenshots/iterative.png' alt="" class='img-responsive img-feature'>
+                <img src='images/screenshots/iterative.png' alt="Screenshot of a Beaker notebook with Python code exploring some JSON data" class='img-responsive img-feature'>
             </div>
 
         </div>
 
         <div class="row row-feature">
             <div class='col-sm-6'>
-                <img src='images/screenshots/visualizations.png' alt="" class='img-responsive img-feature'>
+                <img src='images/screenshots/visualizations.png' alt="Screenshot of a Beaker notebook with charts in Matplotlib and ggplot2" class='img-responsive img-feature'>
             </div>
 
             <div class='col-sm-6'>
@@ -85,14 +85,14 @@ title: About / features
             </div>
 
             <div class='col-sm-6'>
-                <img src='images/screenshots/inline.png' alt="" class='img-responsive img-feature'>
+                <img src='images/screenshots/inline.png' alt="Screenshot of a Beaker notebook with text, a button, and a YouTube video embeded" class='img-responsive img-feature'>
             </div>
 
         </div>        
 
         <div class="row row-feature">
             <div class='col-sm-6'>
-                <img src='images/screenshots/organization.png' alt="" class='img-responsive img-feature'>
+                <img src='images/screenshots/organization.png' alt="Screenshot showing the hierarchy of section cells in a Beaker notebook" class='img-responsive img-feature'>
             </div>            
 
             <div class='col-sm-6'>
