use all double quotes

--- a/about.html
+++ b/about.html
@@ -9,9 +9,9 @@ title: About / features
     })
 </script>
 
-<div class='row'>    
+<div class="row">    
 
-    <div class='col-sm-3 col-sm-push-9' id='nav-column'>
+    <div class="col-sm-3 col-sm-push-9" id="nav-column">
         <ul class="nav nav-stacked" id="sidebar">
             <li><a href="#sec2">Features</a></li>
             <li><a href="#sec3">Examples</a></li>
@@ -21,12 +21,12 @@ title: About / features
         </ul>                    
     </div>                    
 
-    <div class='col-sm-9 col-sm-pull-3'>
+    <div class="col-sm-9 col-sm-pull-3">
 
         <p>Beaker is a polyglot code notebook that allows data scientists to analyze data and document their process using multiple programming languages. Users can seamlessly switch between their favorite languages and tools within a single document.</p>
 
-        <img src='images/bk4.png' alt="Screenshot of two Beaker notebooks with Python, R, and HTML code" class='img-responsive'>
-        <h2 id="sec2" class='h-about'>Features</h2>
+        <img src="images/bk4.png" alt="Screenshot of two Beaker notebooks with Python, R, and HTML code" class="img-responsive">
+        <h2 id="sec2" class="h-about">Features</h2>
 
         <h3>Language support</h3>
         <p>
@@ -37,38 +37,38 @@ title: About / features
             Beaker is built with a plugin-based architecture, so additional languages can easily by added by us or anybody else.
         </p>
 
-        <img src='images/languages/python.png' class='img-language-about' alt='Python logo'>
-        <img src='images/languages/r.png' class='img-language-about' alt='R logo'>
-        <img src='images/languages/julia.png' class='img-language-about' alt='Julia logo'>
-        <img src='images/languages/groovy.png' class='img-language-about' alt='Groovy logo'>
-        <img src='images/languages/html.png' class='img-language-about' alt='HTML logo'>
-        <img src='images/languages/markdown.png' class='img-language-about' alt='Markdown logo'>
-        <img src='images/languages/latex.png' class='img-language-about' alt='Latex logo'>
-        <img src='images/languages/js.png' class='img-language-about' alt='JavaScript logo'>    
+        <img src="images/languages/python.png" class="img-language-about" alt="Python logo">
+        <img src="images/languages/r.png" class="img-language-about" alt="R logo">
+        <img src="images/languages/julia.png" class="img-language-about" alt="Julia logo">
+        <img src="images/languages/groovy.png" class="img-language-about" alt="Groovy logo">
+        <img src="images/languages/html.png" class="img-language-about" alt="HTML logo">
+        <img src="images/languages/markdown.png" class="img-language-about" alt="Markdown logo">
+        <img src="images/languages/latex.png" class="img-language-about" alt="Latex logo">
+        <img src="images/languages/js.png" class="img-language-about" alt="JavaScript logo">    
 
         <h3>Notebook format</h3>
 
         <div class="row row-feature">
-            <div class='col-sm-6'>
-                <h4 class='h-feature'>Iterative exploration</h4>
+            <div class="col-sm-6">
+                <h4 class="h-feature">Iterative exploration</h4>
                 <p>
                     The notebook format is based on blocks of code called cells. Cells can be added anywhere in the notebook and can be edited and run independently from each other. This makes an ideal environment for iterative exploration of data and coding ideas.
                 </p>
             </div>
 
-            <div class='col-sm-6'>
-                <img src='images/screenshots/iterative.png' alt="Screenshot of a Beaker notebook with Python code exploring some JSON data" class='img-responsive img-feature'>
+            <div class="col-sm-6">
+                <img src="images/screenshots/iterative.png" alt="Screenshot of a Beaker notebook with Python code exploring some JSON data" class="img-responsive img-feature">
             </div>
 
         </div>
 
         <div class="row row-feature">
-            <div class='col-sm-6'>
-                <img src='images/screenshots/visualizations.png' alt="Screenshot of a Beaker notebook with charts in Matplotlib and ggplot2" class='img-responsive img-feature'>
+            <div class="col-sm-6">
+                <img src="images/screenshots/visualizations.png" alt="Screenshot of a Beaker notebook with charts in Matplotlib and ggplot2" class="img-responsive img-feature">
             </div>
 
-            <div class='col-sm-6'>
-                <h4 class='h-feature'>Visualizations</h4>
+            <div class="col-sm-6">
+                <h4 class="h-feature">Visualizations</h4>
                 <p>
                     Visualizations created with libraries like ggplot2 and matplotlib will appear directly in the notebook along with your code.
                 </p> 
@@ -77,26 +77,26 @@ title: About / features
         </div>
 
         <div class="row row-feature">
-            <div class='col-sm-6'>
-                <h4 class='h-feature'>Inline documentation</h4>
+            <div class="col-sm-6">
+                <h4 class="h-feature">Inline documentation</h4>
                 <p>
                     The inclusion of markup languages like HTML, Markdown, and Latex means that you can document your work right alongside your code.
                 </p> 
             </div>
 
-            <div class='col-sm-6'>
-                <img src='images/screenshots/inline.png' alt="Screenshot of a Beaker notebook with text, a button, and a YouTube video embeded" class='img-responsive img-feature'>
+            <div class="col-sm-6">
+                <img src="images/screenshots/inline.png" alt="Screenshot of a Beaker notebook with text, a button, and a YouTube video embeded" class="img-responsive img-feature">
             </div>
 
         </div>        
 
         <div class="row row-feature">
-            <div class='col-sm-6'>
-                <img src='images/screenshots/organization.png' alt="Screenshot showing the hierarchy of section cells in a Beaker notebook" class='img-responsive img-feature'>
+            <div class="col-sm-6">
+                <img src="images/screenshots/organization.png" alt="Screenshot showing the hierarchy of section cells in a Beaker notebook" class="img-responsive img-feature">
             </div>            
 
-            <div class='col-sm-6'>
-                <h4 class='h-feature'>Organization</h4>
+            <div class="col-sm-6">
+                <h4 class="h-feature">Organization</h4>
                 <p>
                     Beaker provides several features to help organize your notebooks, for your own convenience or for sharing your work with colleagues.
                 </p> 
@@ -113,17 +113,17 @@ title: About / features
         </p>
 
         <div class="row">
-            <div class='col-sm-6'>
+            <div class="col-sm-6">
                 <h4>Notebook viewer</h4>
                 <p>
                     We provide a notebook viewer that can render any notebook accessible from the web. We also provide a one-click action to save a copy of your notebook to a GitHub Gist and generate a notebook viewer link.
                 </p> 
                 <p>
-                    The viewer is, of course, open source. This means you can install a copy on your private cloud to view notebooks you don't want to share with the whole world
+                    The viewer is, of course, open source. This means you can install a copy on your private cloud to view notebooks you don"t want to share with the whole world
                 </p>
             </div>
 
-            <div class='col-sm-6'>
+            <div class="col-sm-6">
                 <h4>HTML export</h4>
                 <p>
                     We also provide the ability to get a raw HTML representation of your notebook to embed in your blog or website.
@@ -133,27 +133,27 @@ title: About / features
         </div>           
 
 
-        <h2 id="sec3" class='h-about'>Examples</h2>
+        <h2 id="sec3" class="h-about">Examples</h2>
         <p>
             These are notebooks and snippets that have been exported to the web directly from Beaker.
         </p>                  
 
-        <p><a href='http://54.82.109.105:5000/gist/anonymous/10490219'>Tutorial</a></p>
+        <p><a href="http://54.82.109.105:5000/gist/anonymous/10490219">Tutorial</a></p>
 
-        <p><a href='http://54.82.109.105:5000/gist/anonymous/10490366'>Single cell with code and table</a></p>
+        <p><a href="http://54.82.109.105:5000/gist/anonymous/10490366">Single cell with code and table</a></p>
 
 
 
-        <h2 id="sec4" class='h-about'>Open source</h2>
+        <h2 id="sec4" class="h-about">Open source</h2>
         <p>
             Beaker's full source code and documentation is available on <a href="https://github.com/twosigma/beaker-notebook">GitHub</a> under the Apache 2.0 license.
         </p>     
 
         <p>
-            Beaker utilizes many open source tools including <a href='http://ipython.org'>IPython</a>, <a href='https://rforge.net/Rserve/'>Rserve</a>, <a href='https://github.com/JuliaLang/IJulia.jl'>IJulia</a>, <a href='http://angularjs.org/'>Angular</a>, and <a href='http://getbootstrap.com/'>Bootstrap</a>. Check out <a href="https://github.com/twosigma/beaker-notebook">our source</a> to see all the tools we leverage.
+            Beaker utilizes many open source tools including <a href="http://ipython.org">IPython</a>, <a href="https://rforge.net/Rserve/">Rserve</a>, <a href="https://github.com/JuliaLang/IJulia.jl">IJulia</a>, <a href="http://angularjs.org/">Angular</a>, and <a href="http://getbootstrap.com/">Bootstrap</a>. Check out <a href="https://github.com/twosigma/beaker-notebook">our source</a> to see all the tools we leverage.
         </p>
 
-        <h2 id="sec5" class='h-about'>Plugin-based architecture</h2>
+        <h2 id="sec5" class="h-about">Plugin-based architecture</h2>
         <p>
             Beaker was designed from the beginning with flexibility in mind. All of the core functionality including language evaluation, menu items, and output displays are built using plugins. This means that any language or feature you want to add to Beaker can work just as well as everything we've included by default.
         </p>          
@@ -171,7 +171,7 @@ title: About / features
             <li><a href="https://github.com/twosigma/beaker-notebook/wiki/OutputDisplay-spec">Output display plugins</a></li>
         </ul>
 
-        <h2 id="sec6" class='h-about'>Two Sigma</h2>
+        <h2 id="sec6" class="h-about">Two Sigma</h2>
         <p>
             Beaker was created and is maintained by <a href="http://www.twosigma.com">Two Sigma</a>. 
         </p>                         
