--- a/faq.html
+++ b/faq.html
@@ -9,8 +9,8 @@ title: FAQ
     })
 </script>
 
-<div class='row'>          
-    <div class='col-sm-12'>
+<div class="row">          
+    <div class="col-sm-12">
         <div class="row">
             <div class="col-md-12">
 
