--- a/index.html
+++ b/index.html
@@ -4,39 +4,39 @@ title: The data scientist's lab notebook
 ---
 
 
-<div class='row'>
+<div class="row">
 
-    <div class='col-sm-9 col-sm-push-3'>
-        <img src='images/bk4.png' alt="Screenshot of two Beaker notebooks with Python, R, and HTML code" class='img-responsive'>
+    <div class="col-sm-9 col-sm-push-3">
+        <img src="images/bk4.png" alt="Screenshot of two Beaker notebooks with Python, R, and HTML code" class="img-responsive">
     </div>   
 
-    <div class='col-sm-3 col-sm-pull-9'>
+    <div class="col-sm-3 col-sm-pull-9">
 
         <div >
-            <h1 style='margin-top: 0px'>The data scientist's laboratory</h1>                        
-        <img src='images/languages/python.png' class='img-language' alt='Python logo'>
-        <img src='images/languages/r.png' class='img-language' alt='R logo'>
-        <img src='images/languages/julia.png' class='img-language' alt='Julia logo'>
-        <img src='images/languages/groovy.png' class='img-language' alt='Groovy logo'>
-        <img src='images/languages/html.png' class='img-language' alt='HTML logo'>
-        <img src='images/languages/markdown.png' class='img-language' alt='Markdown logo'>
-        <img src='images/languages/latex.png' class='img-language' alt='Latex logo'>
-        <img src='images/languages/js.png' class='img-language' alt='JavaScript logo'>               
+            <h1 style="margin-top: 0px">The data scientist's laboratory</h1>                        
+        <img src="images/languages/python.png" class="img-language" alt="Python logo">
+        <img src="images/languages/r.png" class="img-language" alt="R logo">
+        <img src="images/languages/julia.png" class="img-language" alt="Julia logo">
+        <img src="images/languages/groovy.png" class="img-language" alt="Groovy logo">
+        <img src="images/languages/html.png" class="img-language" alt="HTML logo">
+        <img src="images/languages/markdown.png" class="img-language" alt="Markdown logo">
+        <img src="images/languages/latex.png" class="img-language" alt="Latex logo">
+        <img src="images/languages/js.png" class="img-language" alt="JavaScript logo">               
         </div>
     </div>
 
 </div>
 
-<div class='row'>          
-    <div class='col-sm-12'>
-        <p class='text-main'>Beaker is a polyglot code notebook that allows data scientists to analyze and visualize data and document their process using multiple programming languages. Users can seamlessly switch between their favorite languages and tools within a single document.</p>
+<div class="row">          
+    <div class="col-sm-12">
+        <p class="text-main">Beaker is a polyglot code notebook that allows data scientists to analyze and visualize data and document their process using multiple programming languages. Users can seamlessly switch between their favorite languages and tools within a single document.</p>
     </div>          
 </div>      
 
-<div class='row'>          
-    <div class='col-sm-4 col-sm-offset-4'>
-        <div align='center'>
-            <p class='text-main'>
+<div class="row">          
+    <div class="col-sm-4 col-sm-offset-4">
+        <div align="center">
+            <p class="text-main">
                 Get the beta version:
             </p>
             
@@ -48,7 +48,7 @@ title: The data scientist's lab notebook
 
                     <div class="mc-field-group">
                         <label for="mce-EMAIL"></label>
-                        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder='Email address'> <input type="submit" value="Sign up" name="subscribe" id="mc-embedded-subscribe" class="button">
+                        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email address"> <input type="submit" value="Sign up" name="subscribe" id="mc-embedded-subscribe" class="button">
                     </div>
                     <div id="mce-responses" class="clear">
                         <div class="response" id="mce-error-response" style="display:none"></div>
