--- a/getting-started.html
+++ b/getting-started.html
@@ -9,11 +9,11 @@ title: Getting started
     })
 </script>
 
-<div class='row'>    
+<div class="row">    
 
 
 
-    <div class='col-sm-9'>
+    <div class="col-sm-9">
 
         <h1 id="sec2">Installation</h1>
 
@@ -34,7 +34,7 @@ title: Getting started
                 Install <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html">JDK 7</a>
 
                 <h4>Python</h4>
-                <p>Beaker requires Python to startup, and the Python plugin requires IPython >= 1.0. The easiest way to install both of these is with <a href='https://store.continuum.io/cshop/anaconda/'>Anaconda</a>. The default install will give you everything you need.</p>                                    
+                <p>Beaker requires Python to startup, and the Python plugin requires IPython >= 1.0. The easiest way to install both of these is with <a href="https://store.continuum.io/cshop/anaconda/">Anaconda</a>. The default install will give you everything you need.</p>                                    
 
                 <h3>Download Beaker</h3>
 
@@ -46,7 +46,7 @@ title: Getting started
 
                         <div class="mc-field-group">
                             <label for="mce-EMAIL"></label>
-                            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder='Email address'> <input type="submit" value="Sign up" name="subscribe" id="mc-embedded-subscribe" class="button">
+                            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email address"> <input type="submit" value="Sign up" name="subscribe" id="mc-embedded-subscribe" class="button">
                         </div>
                         <div id="mce-responses" class="clear">
                             <div class="response" id="mce-error-response" style="display:none"></div>
@@ -71,7 +71,7 @@ title: Getting started
                 <code>install.packages("ggplot2")</code>
 
                 <h5>Julia</h5>
-                <p>Install IPython using <a href='https://store.continuum.io/cshop/anaconda/'>Anaconda</a> as mentioned above. Then download and install <a href='http://julialang.org/downloads/'>Julia</a>. Finally open Julia and run this:</p>
+                <p>Install IPython using <a href="https://store.continuum.io/cshop/anaconda/">Anaconda</a> as mentioned above. Then download and install <a href="http://julialang.org/downloads/">Julia</a>. Finally open Julia and run this:</p>
                 <code>Pkg.add("IJulia")</code>            
             </div>
 
@@ -82,7 +82,7 @@ title: Getting started
                 Install <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html">JDK 7</a>
 
                 <h4>Python</h4>
-                <p>Beaker requires Python to startup, and the Python plugin requires IPython >= 1.0. The easiest way to install both of these is with <a href='https://store.continuum.io/cshop/anaconda/'>Anaconda</a>. The default install will give you everything you need.</p>
+                <p>Beaker requires Python to startup, and the Python plugin requires IPython >= 1.0. The easiest way to install both of these is with <a href="https://store.continuum.io/cshop/anaconda/">Anaconda</a>. The default install will give you everything you need.</p>
 
                 <h4>nginx</h4>
                 <p>Download <a href="http://nginx.org/en/download.html">nginx</a>. Extract the folder and <a href="http://www.computerhope.com/issues/ch000549.htm">add it to your PATH</a>.</p>
@@ -97,7 +97,7 @@ title: Getting started
 
                         <div class="mc-field-group">
                             <label for="mce-EMAIL"></label>
-                            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder='Email address'> <input type="submit" value="Sign up" name="subscribe" id="mc-embedded-subscribe" class="button">
+                            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email address"> <input type="submit" value="Sign up" name="subscribe" id="mc-embedded-subscribe" class="button">
                         </div>
                         <div id="mce-responses" class="clear">
                             <div class="response" id="mce-error-response" style="display:none"></div>
@@ -122,7 +122,7 @@ title: Getting started
                 <code>install.packages("ggplot2")</code>
 
                 <h5>Julia</h5>
-                <p>Install IPython using <a href='https://store.continuum.io/cshop/anaconda/'>Anaconda</a> as mentioned above. Then download and install <a href='http://julialang.org/downloads/'>Julia</a>. Finally open Julia and run this:</p>
+                <p>Install IPython using <a href="https://store.continuum.io/cshop/anaconda/">Anaconda</a> as mentioned above. Then download and install <a href="http://julialang.org/downloads/">Julia</a>. Finally open Julia and run this:</p>
                 <code>Pkg.add("IJulia")</code>            
             </div>
 
@@ -155,7 +155,7 @@ title: Getting started
 
                         <div class="mc-field-group">
                             <label for="mce-EMAIL"></label>
-                            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder='Email address'> <input type="submit" value="Sign up" name="subscribe" id="mc-embedded-subscribe" class="button">
+                            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email address"> <input type="submit" value="Sign up" name="subscribe" id="mc-embedded-subscribe" class="button">
                         </div>
                         <div id="mce-responses" class="clear">
                             <div class="response" id="mce-error-response" style="display:none"></div>
@@ -191,7 +191,7 @@ title: Getting started
                 <code>install.packages("ggplot2")</code>
 
                 <h5>Julia</h5>
-                <p>Install IPython using <a href='https://store.continuum.io/cshop/anaconda/'>Anaconda</a> as mentioned above. Then download and install <a href='http://julialang.org/downloads/'>Julia</a>. Finally open Julia and run this:</p>
+                <p>Install IPython using <a href="https://store.continuum.io/cshop/anaconda/">Anaconda</a> as mentioned above. Then download and install <a href="http://julialang.org/downloads/">Julia</a>. Finally open Julia and run this:</p>
                 <code>Pkg.add("IJulia")</code>                 
             </div>
 
