--- a/try.html
+++ b/try.html
@@ -8,8 +8,8 @@ layout: default
     })
 </script>
 
-<div class='row'>          
-    <div class='col-sm-12'>
+<div class="row">          
+    <div class="col-sm-12">
         Try - TODO
     </div>          
 </div>      
