removed mention on unimplemented HTML export feature, added domain name to viewer links

--- a/about.html
+++ b/about.html
@@ -112,25 +112,13 @@ title: About / features
             The notebook format is a great way to share your work, and Beaker makes it easy to do that. 
         </p>
 
-        <div class="row">
-            <div class="col-sm-6">
-                <h4>Notebook viewer</h4>
-                <p>
-                    We provide a notebook viewer that can render any notebook accessible from the web. We also provide a one-click action to save a copy of your notebook to a GitHub Gist and generate a notebook viewer link.
-                </p> 
-                <p>
-                    The viewer is, of course, open source. This means you can install a copy on your private cloud to view notebooks you don"t want to share with the whole world
-                </p>
-            </div>
-
-            <div class="col-sm-6">
-                <h4>HTML export</h4>
-                <p>
-                    We also provide the ability to get a raw HTML representation of your notebook to embed in your blog or website.
-                </p> 
-            </div>
-
-        </div>           
+        <h4>Notebook viewer</h4>
+        <p>
+            We provide a <a href="http://sharing.beakernotebook.com:5000">notebook viewer</a> that can render a notebook from any URL. We also provide a one-click action to save a copy of your notebook to a GitHub Gist and generate a notebook viewer link.
+        </p> 
+        <p>
+            The viewer is open source (in fact, it's a fork of IPython's open source viewer). This means you can install a copy on your private cloud to view notebooks you don"t want to share with the whole world
+        </p>    
 
 
         <h2 id="sec3" class="h-about">Examples</h2>
@@ -138,9 +126,9 @@ title: About / features
             These are notebooks and snippets that have been exported to the web directly from Beaker.
         </p>                  
 
-        <p><a href="http://54.82.109.105:5000/gist/anonymous/10490219">Tutorial</a></p>
+        <p><a href="http://sharing.beakernotebook.com:5000/gist/anonymous/10490219">Tutorial</a></p>
 
-        <p><a href="http://54.82.109.105:5000/gist/anonymous/10490366">Single cell with code and table</a></p>
+        <p><a href="http://sharing.beakernotebook.com:5000/gist/anonymous/10490366">Single cell with code and table</a></p>
 
 
 
