--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@ title: About / features
 
         <h4>Notebook viewer</h4>
         <p>
-            We provide a <a href="http://sharing.beakernotebook.com:5000">notebook viewer</a> that can render a notebook from any URL. We also provide a one-click action to save a copy of your notebook to a GitHub Gist and generate a notebook viewer link.
+            We provide a <a href="http://sharing.beakernotebook.com">notebook viewer</a> that can render a notebook from any URL. We also provide a one-click action to save a copy of your notebook to a GitHub Gist and generate a notebook viewer link.
         </p> 
         <p>
             The viewer is open source (in fact, it's a fork of IPython's open source viewer). This means you can install a copy on your private cloud to view notebooks you don"t want to share with the whole world
@@ -126,9 +126,9 @@ title: About / features
             These are notebooks and snippets that have been exported to the web directly from Beaker.
         </p>                  
 
-        <p><a href="http://sharing.beakernotebook.com:5000/gist/anonymous/10490219">Tutorial</a></p>
+        <p><a href="http://sharing.beakernotebook.com/gist/anonymous/10490219">Tutorial</a></p>
 
-        <p><a href="http://sharing.beakernotebook.com:5000/gist/anonymous/10490366">Single cell with code and table</a></p>
+        <p><a href="http://sharing.beakernotebook.com/gist/anonymous/10490366">Single cell with code and table</a></p>
 
 
 
