reduced width and changed intro text

--- a/about.html
+++ b/about.html
@@ -23,8 +23,9 @@ title: About / features
 
     <div class="col-sm-9 col-sm-pull-3">
 
-        <p>Beaker is a polyglot code notebook that allows data scientists to analyze data and document their process using multiple programming languages. Users can seamlessly switch between their favorite languages and tools within a single document.</p>
-
+        <p>Beaker is a code notebook that allows you to analyze, visualize, and document data using multiple programming languages. Beaker's plugin-based polyglot architecture enables you to seamlessly switch between languages in your documents and add support for your favorite languages that we've missed.</p>
+        <br />
+        
         <img src="images/bk4.png" alt="Screenshot of two Beaker notebooks with Python, R, and HTML code" class="img-responsive">
         <h2 id="sec2" class="h-about">Features</h2>
 
