--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ title: The data scientist's lab notebook
 
 <div class="row">          
     <div class="col-sm-12">
-        <p class="text-main">Beaker is a polyglot code notebook that allows data scientists to analyze and visualize data and document their process using multiple programming languages. Users can seamlessly switch between their favorite languages and tools within a single document.</p>
+        <p class="text-main">Beaker is a code notebook that allows you to analyze, visualize, and document data using multiple programming languages. Beaker's plugin-based polyglot architecture enables you to seamlessly switch between languages in your documents and add support for your favorite languages that we've missed.</p>
     </div>          
 </div>      
 
