larger text on about and FAQ

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ title: About / features
     })
 </script>
 
-<div class="row">    
+<div class="row large-font">    
 
     <div class="col-sm-3 col-sm-push-9" id="nav-column">
         <ul class="nav nav-stacked" id="sidebar">
