--- a/getting-started.html
+++ b/getting-started.html
@@ -41,7 +41,7 @@ title: Getting started
                 
                 <h3>Download Beaker</h3>
 
-                <p>Please provide your email address. You'll receive a download link when you confirm.</p>
+                <p>You'll receive a download link when you confirm your email.</p>
 
                 <!-- Begin MailChimp Signup Form -->
                 <div id="mc_embed_signup">
@@ -165,7 +165,7 @@ title: Getting started
                 
                 <h3>Download Beaker</h3>
 
-                <p>Please provide your email address. You'll receive a download link when you confirm.</p>
+                <p>You'll receive a download link when you confirm your email.</p>
 
                 <!-- Begin MailChimp Signup Form -->
                 <div id="mc_embed_signup">
@@ -297,7 +297,7 @@ title: Getting started
 
                 <h3>Download Beaker</h3>
 
-                <p>To receive the Beaker beta, please provide your email address. You'll receive a download link when you confirm your address.</p>
+                <p>You'll receive a download link when you confirm your email.</p>
 
                 <!-- Begin MailChimp Signup Form -->
                 <div id="mc_embed_signup">
