--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@ title: The data scientist's lab notebook
 </div>      
 
 <div class="row">          
-    <div class="col-sm-4 col-sm-offset-4">
+    <div class="col-sm-6 col-sm-offset-3">
         <div align="center">
             <p class="text-main">
                 Get the beta version:
             </p>
             
-            <p>Please provide your email address. You'll receive a download link when you confirm your address.</p>
+            <p>You'll receive a download link when you confirm your email.</p>
 
             <!-- Begin MailChimp Signup Form -->
             <div id="mc_embed_signup">
