--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@ title: About / features
 
         <h2 id="sec3" class="h-about">Examples</h2>
         <p>
-            These are notebooks and snippets that have been exported to the web directly from Beaker.
+            These are notebooks and snippets that have been exported from Beaker.
         </p>                  
         
         <div class="row">    
