add thumbnail class to example images

--- a/about.html
+++ b/about.html
@@ -126,13 +126,13 @@ title: About / features
         <div class="row">    
             <div class="col-sm-6">
                 <a href="http://sharing.beakernotebook.com/gist/anonymous/11152408">
-                    <img src="images/screenshots/tutorial2.png" class="img-responsive" alt="screenshot of tutorial">
+                    <img src="images/screenshots/tutorial2.png" class="img-responsive img-thumbnail" alt="screenshot of tutorial">
                     Beaker tutorial</a>
             </div>
 
             <div class="col-sm-6">
                 <a href="http://sharing.beakernotebook.com/gist/anonymous/11152432">
-                    <img src="images/screenshots/r.png" class="img-responsive" alt="screenshot of tutorial">
+                    <img src="images/screenshots/r.png" class="img-responsive img-thumbnail" alt="screenshot R basics notebook">
                     R basics</a>
             </div>
         </div>        
@@ -140,12 +140,12 @@ title: About / features
         <div class="row">    
             <div class="col-sm-6">
                 <a href="http://sharing.beakernotebook.com/gist/anonymous/11152466">
-                    <img src="images/screenshots/groovy.png" class="img-responsive" alt="screenshot of tutorial">
+                    <img src="images/screenshots/groovy.png" class="img-responsive img-thumbnail" alt="screenshot of Groovy basics notebook">
                     Groovy basics</a>
             </div>  
             <div class="col-sm-6">
                 <a href="http://sharing.beakernotebook.com/gist/anonymous/10490366">
-                    <img src="images/screenshots/cell.png" class="img-responsive" alt="screenshot of tutorial">
+                    <img src="images/screenshots/cell.png" class="img-responsive img-thumbnail" alt="screenshot of single cell shared">
                     Single input/output cell</a>
             </div>              
         </div>              
