--- a/index.html
+++ b/index.html
@@ -76,19 +76,19 @@ title: The data scientist's lab notebook
 <div class="row">    
     <div class="col-sm-4">
         <a href="http://sharing.beakernotebook.com/gist/anonymous/11152408">
-            <img src="images/screenshots/tutorial2.png" class="img-responsive" alt="screenshot of tutorial">
+            <img src="images/screenshots/tutorial2.png" class="img-responsive img-thumbnail" alt="screenshot of tutorial">
             Beaker tutorial</a>
     </div>
     
     <div class="col-sm-4">
         <a href="http://sharing.beakernotebook.com/gist/anonymous/11152432">
-            <img src="images/screenshots/r.png" class="img-responsive" alt="screenshot of tutorial">
+            <img src="images/screenshots/r.png" class="img-responsive img-thumbnail" alt="screenshot of R basics notebook">
             R basics</a>
     </div>
     
     <div class="col-sm-4">
         <a href="http://sharing.beakernotebook.com/gist/anonymous/11152466">
-            <img src="images/screenshots/groovy.png" class="img-responsive" alt="screenshot of tutorial">
+            <img src="images/screenshots/groovy.png" class="img-responsive img-thumbnail" alt="screenshot of Groovy basics notebook">
             Groovy basics</a>
     </div>   
 </div>
