--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@ title: About / features
             <div class="col-sm-6">
                 <a href="http://sharing.beakernotebook.com/gist/anonymous/11152408">
                     <img src="images/screenshots/tutorial2.png" class="img-responsive img-thumbnail" alt="screenshot of tutorial">
-                    Beaker tutorial</a>
+                    Beaker tutorial (includes Python, R, Groovy and JavaScript)</a>
             </div>
 
             <div class="col-sm-6">
