--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ title: The data scientist's lab notebook
     <div class="col-sm-4">
         <a href="http://sharing.beakernotebook.com/gist/anonymous/11152408">
             <img src="images/screenshots/tutorial2.png" class="img-responsive img-thumbnail" alt="screenshot of tutorial">
-            Beaker tutorial</a>
+            Beaker tutorial (includes Python, R, Groovy and JavaScript)</a>
     </div>
     
     <div class="col-sm-4">
